# text-plistlib

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  setup.py
tests/: extension.strings  hex.plist  nullable.plist  oneval.plist  simple.plist  test_smoke.py
text_plistlib/: __init__.py  impl.py  openstep.ebnf  patch.py  plistlib.py  pparser.py  semantics.py  textplist.py
